dataset1235/2025-2/1379599236/users/400451609/executions/2110095464_2520838975.log
== SUBMISSION (2025-08-25 18:59:27)
-- CODE: 
x_a = float(input("Qual o valor de Xa? "))
x_b = float(input("Qual o valor de Xb? "))
y_a = float(input("Qual o valor de Ya? "))
y_b = float(input("Qual o valor de Yb? "))

x_m = (x_b+x_a)/2
y_m = (y_b+y_a)/2

print(round(x_m,1)
print(round(y_m,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
-- ERROR:
File "XXXX", line 9
    print(round(x_m,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
-- ERROR:
File "XXXX", line 9
    print(round(x_m,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
1.0
3.0
6.0
8.0
---- correct output:
3.5
5.5
-- ERROR:
File "XXXX", line 9
    print(round(x_m,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
-5.4
-4.6
-2.3
-4.1

---- correct output:
-3.9
-4.3
-- ERROR:
File "XXXX", line 9
    print(round(x_m,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
-- ERROR:
File "XXXX", line 9
    print(round(x_m,1)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
43
20
52
15
---- correct output:
47.5
17.5
-- ERROR:
File "XXXX", line 9
    print(round(x_m,1)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 18:58:18)
-- CODE: 
x_a = float(input("Qual o valor de Xa? "))
x_b = float(input("Qual o valor de Xb? "))
y_a = float(input("Qual o valor de Ya? "))
y_b = float(input("Qual o valor de Yb? "))

x_m = (x_b+x_a)/2
y_m = (y_b+y_a)/2

print(round(x_m,1),",",round(y_m,1))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
Qual o valor de Xa? Qual o valor de Xb? Qual o valor de Ya? Qual o valor de Yb? 37.5 , 39.0
-- TEST CASE 2:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
Qual o valor de Xa? Qual o valor de Xb? Qual o valor de Ya? Qual o valor de Yb? 1.8 , 4.0
-- TEST CASE 3:
---- input:
1.0
3.0
6.0
8.0
---- correct output:
3.5
5.5
---- user output:
Qual o valor de Xa? Qual o valor de Xb? Qual o valor de Ya? Qual o valor de Yb? 2.0 , 7.0
-- TEST CASE 4:
---- input:
-5.4
-4.6
-2.3
-4.1

---- correct output:
-3.9
-4.3
---- user output:
Qual o valor de Xa? Qual o valor de Xb? Qual o valor de Ya? Qual o valor de Yb? -5.0 , -3.2
-- TEST CASE 5:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
Qual o valor de Xa? Qual o valor de Xb? Qual o valor de Ya? Qual o valor de Yb? 37.5 , 39.0
-- TEST CASE 6:
---- input:
43
20
52
15
---- correct output:
47.5
17.5
---- user output:
Qual o valor de Xa? Qual o valor de Xb? Qual o valor de Ya? Qual o valor de Yb? 31.5 , 33.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:00:27)
-- CODE: 
x_a = float(input("Qual o valor de Xa? "))
y_a = float(input("Qual o valor de Ya? "))
x_b = float(input("Qual o valor de Xb? "))
y_b = float(input("Qual o valor de Yb? "))

x_m = (x_b+x_a)/2
y_m = (y_b+y_a)/2

print(round(x_m,1))
print(round(y_m,1))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
36.5
-- TEST CASE 2:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
3.4
-- TEST CASE 3:
---- input:
1.0
3.0
6.0
8.0
---- correct output:
3.5
5.5
---- user output:
5.5
-- TEST CASE 4:
---- input:
-5.4
-4.6
-2.3
-4.1

---- correct output:
-3.9
-4.3
---- user output:
-4.3
-- TEST CASE 5:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
36.5
-- TEST CASE 6:
---- input:
43
20
52
15
---- correct output:
47.5
17.5
---- user output:
17.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 18:59:36)
-- CODE: 
x_a = float(input("Qual o valor de Xa? "))
x_b = float(input("Qual o valor de Xb? "))
y_a = float(input("Qual o valor de Ya? "))
y_b = float(input("Qual o valor de Yb? "))

x_m = (x_b+x_a)/2
y_m = (y_b+y_a)/2

print(round(x_m,1))
print(round(y_m,1))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
39.0
-- TEST CASE 2:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
4.0
-- TEST CASE 3:
---- input:
1.0
3.0
6.0
8.0
---- correct output:
3.5
5.5
---- user output:
7.0
-- TEST CASE 4:
---- input:
-5.4
-4.6
-2.3
-4.1

---- correct output:
-3.9
-4.3
---- user output:
-3.2
-- TEST CASE 5:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
39.0
-- TEST CASE 6:
---- input:
43
20
52
15
---- correct output:
47.5
17.5
---- user output:
33.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
